// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Enroll Password Authenticator Transformer Tests should add title, and password enrollment elements to UI Schema for enroll PW step with missing password policy settings 1`] = `
{
  "data": {},
  "dataSchema": {
    "credentials.passcode": {
      "validate": [Function],
    },
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [
      "confirmPassword",
      "passwordMatchesValidation",
    ],
    "submit": {
      "step": "enroll-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.password.enroll.title",
        },
        "type": "Title",
      },
      {
        "noMargin": true,
        "options": {
          "name": "username",
          "value": "someuser@noemail.com",
        },
        "type": "HiddenInput",
      },
      {
        "label": "Password",
        "options": {
          "attributes": {
            "autocomplete": "new-password",
          },
          "inputMeta": {
            "name": "credentials.passcode",
            "secret": true,
          },
        },
        "type": "Field",
      },
      {
        "key": "confirmPassword",
        "label": "oie.password.confirmPasswordLabel",
        "options": {
          "attributes": {
            "autocomplete": "new-password",
          },
          "inputMeta": {
            "messages": {
              "value": undefined,
            },
            "name": "confirmPassword",
            "secret": true,
          },
        },
        "type": "Field",
      },
      {
        "key": "passwordMatchesValidation",
        "options": {
          "validationDelayMs": 50,
        },
        "type": "PasswordMatches",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Enroll Password Authenticator Transformer Tests should add title, password requirements and password enrollment elements to UI Schema for enroll PW step 1`] = `
{
  "data": {},
  "dataSchema": {
    "credentials.passcode": {
      "validate": [Function],
    },
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [
      "confirmPassword",
      "passwordMatchesValidation",
    ],
    "submit": {
      "step": "enroll-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.password.enroll.title",
        },
        "type": "Title",
      },
      {
        "options": {
          "header": "password.complexity.requirements.header",
          "id": "password-authenticator--list",
          "requirements": [
            {
              "label": "password.complexity.length.description",
              "ruleKey": "minLength",
            },
          ],
          "settings": {
            "complexity": {
              "minLength": 1,
            },
          },
          "userInfo": {
            "identifier": "someuser@noemail.com",
          },
          "validationDelayMs": 50,
        },
        "type": "PasswordRequirements",
      },
      {
        "noMargin": true,
        "options": {
          "name": "username",
          "value": "someuser@noemail.com",
        },
        "type": "HiddenInput",
      },
      {
        "label": "Password",
        "options": {
          "attributes": {
            "autocomplete": "new-password",
          },
          "inputMeta": {
            "name": "credentials.passcode",
            "secret": true,
          },
        },
        "type": "Field",
      },
      {
        "key": "confirmPassword",
        "label": "oie.password.confirmPasswordLabel",
        "options": {
          "attributes": {
            "autocomplete": "new-password",
          },
          "inputMeta": {
            "messages": {
              "value": undefined,
            },
            "name": "confirmPassword",
            "secret": true,
          },
        },
        "type": "Field",
      },
      {
        "key": "passwordMatchesValidation",
        "options": {
          "validationDelayMs": 50,
        },
        "type": "PasswordMatches",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Enroll Password Authenticator Transformer Tests should add title, password requirements and password enrollment elements to UI Schema for enroll PW step when passcode field name is newPassword 1`] = `
{
  "data": {},
  "dataSchema": {
    "credentials.newPassword": {
      "validate": [Function],
    },
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [
      "confirmPassword",
      "passwordMatchesValidation",
    ],
    "submit": {
      "step": "enroll-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.password.enroll.title",
        },
        "type": "Title",
      },
      {
        "options": {
          "header": "password.complexity.requirements.header",
          "id": "password-authenticator--list",
          "requirements": [
            {
              "label": "password.complexity.length.description",
              "ruleKey": "minLength",
            },
          ],
          "settings": {
            "complexity": {
              "minLength": 1,
            },
          },
          "userInfo": {
            "identifier": "someuser@noemail.com",
          },
          "validationDelayMs": 50,
        },
        "type": "PasswordRequirements",
      },
      {
        "noMargin": true,
        "options": {
          "name": "username",
          "value": "someuser@noemail.com",
        },
        "type": "HiddenInput",
      },
      {
        "label": "Password",
        "options": {
          "attributes": {
            "autocomplete": "new-password",
          },
          "inputMeta": {
            "name": "credentials.newPassword",
            "secret": true,
          },
        },
        "type": "Field",
      },
      {
        "key": "confirmPassword",
        "label": "oie.password.confirmPasswordLabel",
        "options": {
          "attributes": {
            "autocomplete": "new-password",
          },
          "inputMeta": {
            "messages": {
              "value": undefined,
            },
            "name": "confirmPassword",
            "secret": true,
          },
        },
        "type": "Field",
      },
      {
        "key": "passwordMatchesValidation",
        "options": {
          "validationDelayMs": 50,
        },
        "type": "PasswordMatches",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Enroll Password Authenticator Transformer Tests should add title, password requirements and revoke sessions checkbox elements to UI Schema for enroll PW step 1`] = `
{
  "data": {},
  "dataSchema": {
    "credentials.passcode": {
      "validate": [Function],
    },
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [
      "confirmPassword",
      "passwordMatchesValidation",
    ],
    "submit": {
      "step": "enroll-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.password.enroll.title",
        },
        "type": "Title",
      },
      {
        "options": {
          "header": "password.complexity.requirements.header",
          "id": "password-authenticator--list",
          "requirements": [
            {
              "label": "password.complexity.length.description",
              "ruleKey": "minLength",
            },
          ],
          "settings": {
            "complexity": {
              "minLength": 1,
            },
          },
          "userInfo": {
            "identifier": "someuser@noemail.com",
          },
          "validationDelayMs": 50,
        },
        "type": "PasswordRequirements",
      },
      {
        "noMargin": true,
        "options": {
          "name": "username",
          "value": "someuser@noemail.com",
        },
        "type": "HiddenInput",
      },
      {
        "label": "Password",
        "options": {
          "attributes": {
            "autocomplete": "new-password",
          },
          "inputMeta": {
            "name": "credentials.passcode",
            "secret": true,
          },
        },
        "type": "Field",
      },
      {
        "key": "confirmPassword",
        "label": "oie.password.confirmPasswordLabel",
        "options": {
          "attributes": {
            "autocomplete": "new-password",
          },
          "inputMeta": {
            "messages": {
              "value": undefined,
            },
            "name": "confirmPassword",
            "secret": true,
          },
        },
        "type": "Field",
      },
      {
        "key": "passwordMatchesValidation",
        "options": {
          "validationDelayMs": 50,
        },
        "type": "PasswordMatches",
      },
      {
        "label": "Sign me out of all devices",
        "options": {
          "inputMeta": {
            "name": "credentials.revokeSessions",
            "type": "boolean",
          },
        },
        "type": "Field",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
